<resources>
    <string name="app_name">TudorLog</string>
    <string name="welcome">Welcome to Tudor\'s Work Log</string>
    <string name="select_option">Please select one of the options below:</string>
    <string name="btn_add">Add Shifts</string>
    <string name="btn_view">View Shifts</string>
    <string name="new_button">New button</string>
    <string name="clock_out">clock out</string>
    <string name="clock_in">Clock out</string>
    <string name="save">Save</string>
    <string name="select_a_date">Select a date</string>
    <string name="total_hours" />
    <string name="info_shifts">Date     Start     End     Hours</string>
    <string name="date">Date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="hours">Hours</string>
</resources>
