<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="25dp"
            android:paddingBottom="5dp"
            android:text="@string/date"
            android:textColor="@android:color/primary_text_light"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvDate"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="25dp"
            android:paddingBottom="5dp"
            android:text="@string/start"
            android:textColor="@android:color/primary_text_light"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvStart"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="25dp"
            android:paddingBottom="5dp"
            android:text="@string/end"
            android:textColor="@android:color/primary_text_light"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvEnd"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/hours"
            android:textColor="@android:color/primary_text_light"
            android:textSize="20sp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>